# CudaPlasticity

./: .gitignore  CMakeLists.txt  CMakeLists_.txt
data/: aitken__elast1.txt  aitken__elast2.txt  aitken__plast1.txt  aitken__plast2.txt  aitken_elast1.txt  aitken_elast2.txt  aitken_plast1.txt  aitken_plast1f.txt  aitken_plast1pow.txt  aitken_plast2.txt  aitken_plast2f.txt  aitken_plast2pow.txt  diagram.txt  diagramLin.txt  diagramPow.txt  grid.txt  hole1.vtk  holePlatePlastPow.vtk  holePlatePlast_.vtk  newMesh.vtk  rect1.vtk  renumMesh.vtk  result.vtk  ring.vtk  ring1.vtk  solverTest.txt  solverTest.vtk
src/: ConjGradCuda.cu  ConjGradSolver.h  CudaSLAE.cu  CudaSparseSLAE.cu  CudaSparseSLAE.cuh  GaussScheme.cuh  LoadConditions.cuh  Main.cpp  Material.cu  Material.cuh  Mesh.cu  Mesh.cuh  PlasticitySolver.cu  PlasticitySolver.cuh  SLAE_Solvers.cu  SLAE_Solvers.cuh  SparseSLAE.h  StaticMatrix.cuh  StripSLAE.h  SymMatrix.cuh  vec2.cu  vec2.cuh
